--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 10px;
   font-family: sans-serif;
+  background-image: linear-gradient(to right, rgb(0, 0, 0), rgb(255, 255, 255));
 }
 
 .Main {
@@ -22,7 +23,7 @@ img {
 .form {
   position: relative;
   width: 500px;
-  height: 600px;
+  height: 500px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -47,12 +48,12 @@ input:hover {
 }
 
 button {
-  width: 400px;
+  width: 300px;
   height: 40px;
   margin-top: 40px;
   transition: 1s;
   border-radius: 10px;
-  background-color: rgb(234, 255, 202);
+  background-image: linear-gradient(to right, Green, yellow);
   box-shadow: 0px 0px 5px 2px rgb(153, 255, 0);
 }
 
@@ -62,9 +63,8 @@ button:hover {
 }
 
 h2 {
-  display: none;
-}
-.show {
-  margin: 5px;
-  color: rgb(134, 54, 54);
+  padding: 10px;
+  color: rgb(106, 61, 61);
+  font-size: 20px;
+  border-radius: 10px;
 }
